--- a/src/app/components/icos/icos.component.html
+++ b/src/app/components/icos/icos.component.html
@@ -41,13 +41,18 @@
       <div class="grid-container">
           <mat-card *ngFor="let ico of icos">
               <mat-card-header>
-                <!-- <div mat-card-avatar class="example-header-image"></div> -->
                 <mat-card-title>{{ ico.name }}</mat-card-title>
                 <mat-card-subtitle>{{ ico.start_time | date }} - {{ ico.end_time | date }}</mat-card-subtitle>
               </mat-card-header>
           
               <div style="height: 112px; width: 100%;">
-                <img style="height: auto; width: 100%;" src="{{ ico.image }}" alt="">
+                <img style="height: auto; width: 100%; max-height: 100px;"
+                  src="{{ ico.image }}" 
+                  default="https://icowatchlist.com/images/logo3.png" 
+                  class=""
+                  alt="{{ ico.name }}"
+                >
+                <!-- <img style="height: auto; width: 100%;" src="{{ ico.image }}" alt=""> -->
               </div>
           
               <mat-card-content>
